cmake_minimum_required(VERSION 3.16)
project(asprova-programming-contest-9)

set(CMAKE_CXX_STANDARD 20)

add_definitions(-DLOCAL)

add_executable(judge src/judge/judge.cpp src/judge/Problem.cpp)
target_include_directories(judge PRIVATE src/judge)

add_executable(generator src/judge/generator.cpp src/judge/Problem.cpp)
target_include_directories(judge PRIVATE src/judge)

add_executable(solver_sample src/solvers/sample.cpp)
add_executable(solver_v01 src/solvers/v01.cpp)
add_executable(solver_v02 src/solvers/v02.cpp)
add_executable(solver_v03 src/solvers/v03.cpp)
add_executable(solver_v04 src/solvers/v04.cpp)
add_executable(solver_v05 src/solvers/v05.cpp)
add_executable(solver_v06 src/solvers/v06.cpp)
add_executable(solver_v07 src/solvers/v07.cpp)
add_executable(solver_v08 src/solvers/v08.cpp)
add_executable(solver_v09 src/solvers/v09.cpp)
add_executable(solver_v10 src/solvers/v10.cpp)
add_executable(solver_v11 src/solvers/v11.cpp)
add_executable(solver_v12 src/solvers/v12.cpp)
add_executable(solver_v13 src/solvers/v13.cpp)
add_executable(solver_v14 src/solvers/v14.cpp)
add_executable(solver_v15 src/solvers/v15.cpp)
add_executable(solver_v16 src/solvers/v16.cpp)
add_executable(solver_v17 src/solvers/v17.cpp)
add_executable(solver_v18 src/solvers/v18.cpp)
add_executable(solver_v19 src/solvers/v19.cpp)
add_executable(solver_v20 src/solvers/v20.cpp)
add_executable(solver_v21 src/solvers/v21.cpp)
